[gd_scene load_steps=3 format=3 uid="uid://bkev045ddgk2m"]

[ext_resource type="PackedScene" uid="uid://cor0yoq331lb2" path="res://entities/targets/object_target.tscn" id="1_ff6c1"]
[ext_resource type="Script" uid="uid://cpxwtuw3mn0rc" path="res://entities/played_object/played_object.gd" id="1_wbwkq"]

[node name="PlayedObject" type="Node2D"]
script = ExtResource("1_wbwkq")

[node name="TempBackground" type="ColorRect" parent="."]
offset_right = 135.0
offset_bottom = 135.0
mouse_filter = 2

[node name="ObjectTarget" parent="." instance=ExtResource("1_ff6c1")]
position = Vector2(70, 112)

[node name="PlayedCardText" type="Label" parent="."]
offset_right = 132.0
offset_bottom = 66.0
horizontal_alignment = 1
vertical_alignment = 1
